adding initial changes to the signin/frontpage route and component

--- a/src/sass/crn_app/_common.click-to-edit.scss
+++ b/src/sass/crn_app/_common.click-to-edit.scss
@@ -43,7 +43,7 @@
     font-size: 15px;
     color: $c-66;
     font-weight: 400;
-    font-family: $font-family-ssp;
+    font-family: $font-family-open;
     word-wrap: break-word;
     white-space: pre-wrap;
 
