--- a/src/sass/crn_app/_dataset.dataset.scss
+++ b/src/sass/crn_app/_dataset.dataset.scss
@@ -11,7 +11,7 @@
                 padding: 0;
                 text-transform: none;
                 font-weight: 300;
-                font-family: $font-family-ssp;
+                font-family: $font-family-open;
                 font-size: 40px;
                 color: $c-33;
             }
