--- a/src/sass/crn_app/_upload.upload.scss
+++ b/src/sass/crn_app/_upload.upload.scss
@@ -139,7 +139,7 @@
                     padding: 18px;
                     background-color: $f4;
                     color: $ocean;
-                    font-family: $font-family-ssp;
+                    font-family: $font-family-open;
                     font-weight: 400;
                     text-decoration: none;
                 }
