--- a/src/sass/crn_app/_variables.scss
+++ b/src/sass/crn_app/_variables.scss
@@ -81,7 +81,7 @@ $brand-danger:          #c82424 !default;
 // ssp weights: normal 300, 400, 700 - italic 300, 400 , 700
 // Cabin weights: normal 400 - italic 400
 
-$font-family-ssp: 'Source Sans Pro', sans-serif;
+$font-family-open: 'Open Sans', sans-serif;
 $font-family-cabin: 'Cabin', sans-serif;
 
 
