adding a few bug fixes

--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -219,8 +219,8 @@
                         display: inline-block;
                         .btn-warn-component,
                         .warning.btn-warn-component {
-                            font-size: 16px;
-                            margin: 0 0 10px;
+                            font-size: 14px;
+                            margin: 0;
                             &.cancel,
                             &.success {
                                 font-size: 14px;
