--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -155,11 +155,39 @@
     color: $brand-danger;
 }
 
+//papaya overrides
 
 .papaya-wrap{
-    margin: 0 auto;
-    max-width: 800px;
-    height: auto;
+    // margin: 0 auto;
+    // width: auto;
+    // height: 100%;
+    // > div {
+    //     height: 100% !important;
+    //     .papaya-viewer{
+    //         height: 90% !important;
+    //         width: auto !important;
+    //         canvas{
+    //             width: auto !important;
+    //             height: 100% !important;
+    //         }
+    //     }
+    //     .papaya-display{
+    //         height: 5% !important;
+    //          width: 100% !important;
+    //         canvas{
+    //              width: 100% !important;
+    //             height: 100% !important;
+    //         }
+    //     }
+    //     .papaya-kiosk-controls{
+    //         height: 5% !important;
+    //          width: 100% !important;
+    //         canvas{
+    //              width: 100% !important;
+    //             height: 100% !important;
+    //         }
+    //     }
+    // }
     .papaya-controlbar-label{
         color: $black;
     }
