--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -236,6 +236,13 @@
             }
         }
     }
+
+
+}
+
+.display-file-modal.nii-gz .modal-dialog .modal-content .modal-body {
+    padding: 15px 0px 0px 0px;
+    height: 100%;
 }
 
 .update-modal {
