--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -199,6 +199,8 @@
 //papaya overrides
 
 .papaya-wrap{
+    margin: auto;
+    max-width: 90%;
     .papaya-controlbar-label{
         color: $black;
     }
