adding fix for tsv column headers

--- a/src/sass/crn_app/_common.modals.scss
+++ b/src/sass/crn_app/_common.modals.scss
@@ -391,10 +391,14 @@
 
 .reactable-header-sortable {
     color: $primary;
+    padding-right: 50px !important;
+    position: relative;
 
     &::after {
         font-family: FontAwesome;
         content: ' \f0dc';
+        position: absolute;
+        width: 50px;
     }
 
     &.reactable-header-sort-asc::after {
