adding changes to front page browse pipelines

--- a/src/sass/crn_app/_user.frontPage.scss
+++ b/src/sass/crn_app/_user.frontPage.scss
@@ -340,6 +340,9 @@
                     }
                 }
             }
+            &.loading-browse{
+                background: #fff;
+            }
             &.browse {
                 label{
                     font-size: 20px;
