--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -1,7 +1,13 @@
 .analyses {
-
-    .jobs-wrap {
-
+        &.no-jobs{
+            h2{
+                text-align: center;
+            }
+        }
+        .explore-more {
+            padding: 20px 0 0;
+            text-transform: uppercase;
+        }
         .jobs {
             @include border-radius(0);
 
@@ -93,7 +99,21 @@
                 margin: -15px;
                 display: block;
             }
+            .file-structure.panel-group .panel-default .panel-collapse .panel-body > ul {
+                height: auto;
+            }
+            .filetree-editfile {
+                height: 20px;
+                float: none;
+                width: 100%;
+                display: block;
+                margin: 5px 0 0;
 
+                .btn-warn-load {
+                    padding: 0px;
+                    margin: 0px;
+                }
+            }
             .results {
                 margin: 0;
 
@@ -251,7 +271,6 @@
                 }
             }
         }
-    }
 }
 
 .validation {
@@ -575,7 +594,7 @@
                             padding: 8px 15px;
                             display: block;
                             font-size: 14px;
-                            
+
 
                             &::after {
                                 content: '\f0d8';
