--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -43,7 +43,7 @@
 @import './crn_app/dataset.file-tree';
 @import './crn_app/dataset.sidebar';
 @import './crn_app/admin.admin';
-@import './crn_app/user.frontPage';
+@import './crn_app/frontPage';
 @import './crn_app/dashboard.datasets';
 @import './crn_app/upload.upload';
 @import './crn_app/upload.validation';
