--- a/src/sass/crn_app/_frontPage.scss
+++ b/src/sass/crn_app/_frontPage.scss
@@ -159,7 +159,7 @@
                         font-size: 40px;
                     }
                     p{
-                        font-size: 20px;
+                        font-size: 16px;
                         line-height: 22px;
                         color: $c-66;
                     }
@@ -228,11 +228,28 @@
             margin: 20px 39px 20px 10px;
             border: 1px solid $ccc;
             img{
-                margin: 0 0 0 -70px;
+                margin: 0 0 0 -5px;
                 border: 2px solid #eee;
                 width: 450px;
                 height: auto;
-
+                &.snapshot{
+                    width: 270px;
+                }
+                &.browse{
+                    width: 570px;
+                    margin: -60px 0 0 -30px;
+                }
+                &.download{
+                    width: 560px;
+                    margin: -220px 0 0 0px;
+                }
+                &.collaborate{
+                        width: 560px;
+                }
+                &.analyse{
+                    width: 360px;
+                    margin: 0px 0 0 0;
+                }
             }
         }
         .caption {
