adding animation to the expanded snapshot

--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -10,7 +10,6 @@
         }
         .jobs {
             @include border-radius(0);
-
             .panel-heading {
                 padding: 0;
 
@@ -48,11 +47,17 @@
         .job {
             @include border-radius(0);
             margin-bottom: 10px;
-
+            &.border-flash{
+                border: 1px solid $yellow;
+                @include animation(border-flash .6s 5);
+                 .panel-heading {
+                    background: $honey;
+                    @include animation(background-flash .6s 5);
+                }
+            }
             .panel-heading {
                 padding: 0;
                 background: none;
-
                 .panel-title {
                     @extend %clearfix;
                     padding: 10px;
