--- a/src/sass/crn_app/_variables.scss
+++ b/src/sass/crn_app/_variables.scss
@@ -29,6 +29,8 @@ $sky:#007c92;
 $turquoise:#009b76;
 $night:#012a30; //body font color
 
+$yellow: #ffd820;
+$honey: #fffcee;
 
 $notification-green: #77e6a3;
 
