adding changes for bugs562 551 547

--- a/src/sass/crn_app/_frontPage.scss
+++ b/src/sass/crn_app/_frontPage.scss
@@ -220,8 +220,8 @@
         padding: 25px;
         margin: 0 auto;
         .img-wrap{
-            width: 250px;
-            height: 250px;
+            width: 220px;
+            height: 220px;
             overflow: hidden;
             float: left;
             border-radius: 100%;
@@ -258,10 +258,10 @@
         .caption {
             font-family: $font-family-open;
             font-size: 18px;
-            padding: 10px 40px 0 10px;
+            padding: 10px;
             color: $c-66;
             font-weight: 100;
-            width: 310px;
+            width: 280px;
             float: left;
             h3 {
                 font-size: 33px;
