--- a/src/sass/crn_app/_common.click-to-edit.scss
+++ b/src/sass/crn_app/_common.click-to-edit.scss
@@ -54,8 +54,14 @@
             background: $f8;
             border-bottom: 1px solid $e7;
             display: block;
-            margin: 0 -10px -10px;
+            margin: 0 -10px;
             padding: 10px;
+            &.ref-link-markdown{
+                p{
+                    display: inline;
+                    margin-bottom: 0;
+                }
+            }
         }
 
         &:last-child {
@@ -179,10 +185,11 @@
             text-align: center;
         }
 
-        .reference-edit .btn.btn-admin,
+        .array-edit .btn.btn-admin,
         .author-edit .btn.btn-admin {
             width: 100%;
             padding: 8px 10px;
         }
     }
 }
+
