Add job and app query params to job complete notification links

--- a/libs/email/templates/job-complete.html
+++ b/libs/email/templates/job-complete.html
@@ -50,7 +50,7 @@
 			The CRN Team
 		</p>
 
-		<a class="dataset-link" href="{{siteUrl}}/datasets/{{datasetId}}/versions/{{snapshotId}}">Go to snapshot &raquo;</a>
+		<a class="dataset-link" href="{{siteUrl}}/datasets/{{datasetId}}/versions/{{snapshotId}}?app={{appId}}&job={{jobId}}">Go to snapshot &raquo;</a>
 	</div>
 </body>
 <html>
