adding small changes to the filetree and column width on dataset pages

--- a/src/sass/crn_app/_dataset.file-tree.scss
+++ b/src/sass/crn_app/_dataset.file-tree.scss
@@ -77,6 +77,11 @@
     .dataset-inner {
         .file-structure.panel-group {
             .panel-default {
+                .accordion-icon {
+                    float: right;
+                    margin-top: 2px;
+                }
+
                 .type-icon {
                     background: none;
                     border: 0;
@@ -111,6 +116,8 @@
 
                             .btn-file-folder {
                                 color: $c-66;
+                                width: 100%;
+                                text-align: left;
                             }
                         }
                     }
