adjusting input line-height and padding.

--- a/src/sass/crn_app/_common.click-to-edit.scss
+++ b/src/sass/crn_app/_common.click-to-edit.scss
@@ -170,7 +170,7 @@
 
             input {
                 font-size: 14px;
-                //padding: 10px;
+                padding: 11px 8px 10px;
                 //height: 35px;
                 width: 99%;
                 //margin: 0 .5%;
