--- a/src/sass/crn_app/_variables.scss
+++ b/src/sass/crn_app/_variables.scss
@@ -38,6 +38,11 @@ $notification-green: #77e6a3;
     color: $brand-success;
 }
 
+
+.color-warning{
+    color: $coral;
+}
+
 // Gray
 
 $c-9e: #9e9e9e;
