--- a/src/sass/crn_app/_elements-wrappers.scss
+++ b/src/sass/crn_app/_elements-wrappers.scss
@@ -680,6 +680,21 @@ select {
     color: $a5;
 }
 
+.Select{
+    z-index: 1000;
+    .Select-multi-value-wrapper{
+        input{
+            height: auto;
+            font-size: 16px;
+            float: none;
+            padding: 8px;
+            &:focus{
+                outline: none;
+            }
+        }
+    }
+}
+
 
 .select-box-style {
     @include border-radius(0);
@@ -713,3 +728,7 @@ select {
     width: 100%;
     height: 100%;
 }
+
+
+
+
