nav collapse fix

--- a/src/sass/crn_app/_nav.navbar.scss
+++ b/src/sass/crn_app/_nav.navbar.scss
@@ -42,7 +42,7 @@
         }
     }
 
-    .navbar-nav {
+    .main-nav.navbar-nav {
         > li {
             > .navbar-collapse {
                 padding: 0;
