Add visual spacing to array parameter values.

--- a/src/sass/crn_app/_dataset.jobs.scss
+++ b/src/sass/crn_app/_dataset.jobs.scss
@@ -276,7 +276,9 @@
                         height: auto;
                         border-top: 1px solid $eee;
                         padding: 5px 0;
-
+                        .value span {
+                            padding-left: 5px;
+                        }
                         &:last-child {
                             border-bottom: 1px solid $eee;
                         }
